# kubeception

./: .dockerignore  Cargo.toml  Dockerfile  README.md
config/: kubic.toml
src/: config.rs  etcd.rs  k8s.rs  kubectl.rs  main.rs  pki.rs  server.rs  system.rs  systemd.rs
src/resources/: mod.rs
src/resources/bootstrap/: etcd.rs  k8s.rs  kubelet.rs  mod.rs
src/resources/control_plane/: k8s.rs  kubeception.rs  kubelet.rs  mod.rs
